Minor debug + credits+

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-          <img src="static/images/ELEMENT_SWIMMING_Logo_ZAKLADNI_Verze_RGB_BEZ_POZADI jen kolečka.png" class="bi me-2" width="60" height="40"/>
+          <img src="static/images/logo_basic.png" class="bi me-2" width="60" height="40"/>
           <span class="fs-4">Element swimming</span>
         </a>
   
@@ -175,7 +175,7 @@
         <p class="col-md-4 mb-0 text-muted">&copy; 2021 Element swimming, Inc</p>
     
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-          <img src="static/images/ELEMENT_SWIMMING_Logo_ZAKLADNI_Verze_RGB_BEZ_POZADI jen kolečka.png" class="bi me-2" width="60" height="40"/>
+          <img src="static/images/logo_basic.png" class="bi me-2" width="60" height="40"/>
         </a>
     
         <ul class="nav col-md-4 justify-content-end">
@@ -190,9 +190,9 @@
     <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 
-<!-- Credits -
+<!-- Credits 
   https://getbootstrap.com/
+  https://www.pexels.com/cs-cz/foto/osoba-voda-sport-mokry-1263425/
   https://codepen.io/martinwolf/pen/eNNdme
-
-  ->
+  -->
 </html>
