--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </div>
     
     <!-- Home -->
-    <div id="home" class="px-5 pt-4 my-4 text-center border-bottom" style="padding-bottom: 5vh;">
-      <h3 class="fw-bold">Skoč do bazénu s námi, po hlavě</h3>
+    <div id="home" class="px-5 pt-5 my-5 text-center border-bottom" style="padding-bottom: 5vh;">
+      <h3 class="fw-bold">Skoč s námi po hlavě do bazénu</h3>
       <h1 class="display-4 fw-bold">Plavecký trénink 21. století </h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">
@@ -77,7 +77,7 @@
     <div id="about" class="container col-xxl-9 px-4 py-5 border-bottom">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+          <img src="static/images/DSC_0025.webp" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">O nás</h1>
@@ -91,9 +91,8 @@
     </div>
 
     <!-- Cooperation -->
-    <div class="container col-xxl-9 px-4 py-5 border-bottom" id="cooperation">
-      <h2 class="pb-5 text-black-50">Spolupráce</h2>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-5 py-5 align-items-center">
+    <div class="container col-xxl-9 px-4 border-bottom" id="cooperation">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 py-5 align-items-center fill">
         <div class="col d-flex align-items-start cooperation-logo">
           <img src="static/images/logo-klub-plaveckych-sportu-ostrava-small.jpg" class="bi me-2" width="200"/>
         </div>
@@ -120,6 +119,20 @@
           </div>
         </div>
       </div>
+      <div class="row g-4 py-3 row-cols-1 row-cols-lg-3">
+        <div class="feature col">
+          <h2 class="text-muted py-3">Moderní přístup</h2>
+          <p>Sportovní trénink v oblasti plavání založený na moderních poznatcích ze světa plavání a podpořený mnohaletou praxí.</p>
+        </div>
+        <div class="feature col">
+          <h2 class="text-muted py-3">Udržitelné výsledky</h2>
+          <p>Respektujeme Vaši individualitu na základě které, nastavíme nejvhodnější typ tréninku pro dlouhodobě udržitelné výsledky.</p>
+        </div>
+        <div class="feature col">
+          <h2 class="text-muted py-3">Flexibilita a nezávislost</h2>
+          <p>Působíme ve čtyřech městech v ČR a proto není takřka problém vyhovět vaším individuálním požadavkům </p>
+        </div>
+    </div>
     </div>
     
     <!-- Contact -->
