--- a/index.html
+++ b/index.html
@@ -104,21 +104,21 @@
 
     <!-- Services -->
     <div id="services" class="container col-xxl-9 px-4 py-5 border-bottom">
-      <div class="row flex-lg-row align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-        </div>
-        <div class="col-lg-6">
-          <h1 class="display-5 fw-bold lh-1 mb-3">Služby</h1>
-          <p class="lead text-justify">INDIVIDUALNÍ LEKCE
-            Lekce probíhají s certifikovanými TRENÉRY ČSPS (Český svaz plaveckých sportů). Přidanou hodnotou, kterou Element Swimming nabízí je fakt, že všichni naši 
-            trenéři si prošli dlouhodobým rozvojem v procesu sportovní (plavecké) přípravy. Mnozí z nich jsou bývalí reprezentanti a také medailisté z národních šampionátů. 
-            Toto dělá z naších trenérů špičky ve svém oboru co do teorie i praxe.
+      <h1 class="display-4 py-3 fw-bold text-center">Služby našeho týmu</h1>
+      <div class="col-xxl-12 mx-auto">
+        <p class="lead mb-4 text-justify">
+          INDIVIDUALNÍ LEKCE
+          Lekce probíhají s certifikovanými TRENÉRY ČSPS (Český svaz plaveckých sportů). Přidanou hodnotou, kterou Element Swimming nabízí je fakt, že všichni naši 
+          trenéři si prošli dlouhodobým rozvojem v procesu sportovní (plavecké) přípravy. Mnozí z nich jsou bývalí reprezentanti a také medailisté z národních šampionátů. 
+          Toto dělá z naších trenérů špičky ve svém oboru co do teorie i praxe.
           </p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          </div>
+      </div>
+      <div class="overflow-hidden" style="max-height: 50vh;">
+        <div class="container px-5">
+          <img src="static/images/Victoria plavci - tym-Dominik.jpg" class="img-fluid rounded-3 mb-4" alt="team" width="900" height="700" loading="lazy">
         </div>
       </div>
+
       <div class="row g-4 py-3 row-cols-1 row-cols-lg-3">
         <div class="feature col">
           <h2 class="text-muted py-3">Moderní přístup</h2>
@@ -192,10 +192,10 @@
         </a>
     
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Domů</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">O nás</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Služby</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Kontakt</a></li>
+          <li class="nav-item"><a href="#home" class="nav-link px-2 text-muted">Domů</a></li>
+          <li class="nav-item"><a href="#about" class="nav-link px-2 text-muted">O nás</a></li>
+          <li class="nav-item"><a href="#services" class="nav-link px-2 text-muted">Služby</a></li>
+          <li class="nav-item"><a href="#contact" class="nav-link px-2 text-muted">Kontakt</a></li>
         </ul>
       </footer>
     </div>
