--- a/index.html
+++ b/index.html
@@ -54,27 +54,30 @@
     </div>
     
     <!-- Home -->
-    <div id="home" class="px-5 pt-5 my-5 text-center border-bottom" style="padding-bottom: 5vh;">
-      <h3 class="fw-bold">Skoč s námi po hlavě do bazénu</h3>
-      <h1 class="display-4 fw-bold">Plavecký trénink 21. století </h1>
-      <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">
-          Moderní pojetí tréninkového procesu, podložené aktuálními trendy a pod dohledem vysokoškolsky vzdělaných profesionálu v daném oboru. 
-          </p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-          <a href="#contact"><button type="button" class="btn bg-color-es btn-lg px-4 me-sm-3 text-white">Rezervovat trénink</button></a>
-          <a href="#contact"><button type="button" class="btn btn-lg px-4 bg-danger text-white danger-hover">1. trénink zdarma</button></a>
+    <div id="home" class="container my-5">
+      <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
+        <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
+          <h3 class="fw-bold">Skoč s námi po hlavě do bazénu</h3>
+          <h1 class="display-4 fw-bold lh-1 py-3">Plavecký trénink 21. století</h1>
+          <p class="lead">Moderní pojetí tréninkového procesu, podložené aktuálními trendy a pod dohledem vysokoškolsky vzdělaných profesionálu v daném oboru</p>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5">
+            <a href="#contact"><button type="button" class="btn bg-color-es btn-lg px-4 me-sm-3 text-white">Rezervovat trénink</button></a>
+            <a href="#contact"><button type="button" class="btn bg-green btn-lg px-4 text-white">1. trénink zdarma</button></a>
+          </div>
         </div>
-      </div>
-      <div class="overflow-hidden" style="max-height: 50vh;">
-        <div class="container px-5">
-          <img src="static/images/pexels-jim-de-ramos-1263425.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="900" height="700" loading="lazy">
+        <div class="col-lg-7 p-0">
+          <img src="static/images/Victoria plavci - tym-Dominik.jpg" class="img-fluid rounded-3 mb-4" alt="team" height="700" loading="lazy">
         </div>
       </div>
     </div>
 
+    <!-- Home footer -->
+    <div class="container d-flex col-xxl-10 px-4 py-5 border-top border-bottom justify-content-center">
+      <h3 class="col-9 display-5 fw-bold text-center text-secondary">Našim cílem je <blue>Vás naučit efektivně plavat všechny plavecké způsoby</blue> s minimálním výdejem energie</h3>
+    </div>
+
     <!-- About -->
-    <div id="about" class="container col-xxl-9 px-4 py-5 border-bottom">
+    <div id="about" class="container col-xxl-10 px-4 py-5 border-bottom">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
           <img src="static/images/DSC_0025.webp" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
@@ -91,7 +94,7 @@
     </div>
 
     <!-- Cooperation -->
-    <div class="container col-xxl-9 px-4 border-bottom" id="cooperation">
+    <div class="container col-xxl-10 px-4 border-bottom" id="cooperation">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 py-5 align-items-center fill">
         <div class="col d-flex align-items-start cooperation-logo">
           <img src="static/images/logo-klub-plaveckych-sportu-ostrava-small.jpg" class="bi me-2" width="200"/>
@@ -103,8 +106,8 @@
     </div>
 
     <!-- Services -->
-    <div id="services" class="container col-xxl-9 px-4 py-5 border-bottom">
-      <h1 class="display-4 py-3 fw-bold text-center">Služby našeho týmu</h1>
+    <div id="services" class="container col-xxl-10 px-4 py-5 border-bottom">
+      <h1 class="display-4 py-3 fw-bold text-center">Služby</h1>
       <div class="col-xxl-12 mx-auto">
         <p class="lead mb-4 text-justify">
           INDIVIDUALNÍ LEKCE
@@ -113,33 +116,40 @@
           Toto dělá z naších trenérů špičky ve svém oboru co do teorie i praxe.
           </p>
       </div>
-      <div class="overflow-hidden" style="max-height: 50vh;">
-        <div class="container px-5">
-          <img src="static/images/Victoria plavci - tym-Dominik.jpg" class="img-fluid rounded-3 mb-4" alt="team" width="900" height="700" loading="lazy">
-        </div>
-      </div>
+    </div>
 
-      <div class="row g-4 py-3 row-cols-1 row-cols-lg-3">
-        <div class="feature col">
-          <h2 class="text-muted py-3">Moderní přístup</h2>
-          <p>Sportovní trénink v oblasti plavání založený na moderních poznatcích ze světa plavání a podpořený mnohaletou praxí.</p>
+    <!-- Services footer -->
+    <div class="container col-xxl-10 px-4 py-5 border-bottom">
+    <div class="row g-4 py-3 row-cols-1 row-cols-lg-3">
+      <div class="feature col">
+        <div class="feature-icon bg-color-es bg-gradient">
+          <img src="static/images/icons/lightbulb-regular.svg" alt="bulb" width="36" height="36" fill="white">
         </div>
-        <div class="feature col">
-          <h2 class="text-muted py-3">Udržitelné výsledky</h2>
-          <p>Respektujeme Vaši individualitu na základě které, nastavíme nejvhodnější typ tréninku pro dlouhodobě udržitelné výsledky.</p>
+        <h2 class="text-muted py-3">Moderní přístup</h2>
+        <p>Sportovní trénink v oblasti plavání založený na moderních poznatcích ze světa plavání a podpořený mnohaletou praxí</p>
+      </div>
+      <div class="feature col">
+        <div class="feature-icon bg-color-es bg-gradient">
+          <img src="static/images/icons/chart-line-solid.svg" alt="chart" width="36" height="36" fill="white">
         </div>
-        <div class="feature col">
-          <h2 class="text-muted py-3">Flexibilita a nezávislost</h2>
-          <p>Působíme ve čtyřech městech v ČR a proto není takřka problém vyhovět vaším individuálním požadavkům </p>
+        <h2 class="text-muted py-3">Udržitelné výsledky</h2>
+        <p>Respektujeme Vaši individualitu na základě které, nastavíme nejvhodnější typ tréninku pro dlouhodobě udržitelné výsledky</p>
+      </div>
+      <div class="feature col">
+        <div class="feature-icon bg-color-es bg-gradient">
+          <img src="static/images/icons/handshake-regular.svg" alt="mail" width="36" height="36" fill="white">
         </div>
-    </div>
-    </div>
+        <h2 class="text-muted py-3">Flexibilita a nezávislost</h2>
+        <p>Působíme ve čtyřech městech v ČR a proto není takřka problém vyhovět vaším individuálním požadavkům </p>
+      </div>
+  </div>
+  </div>
     
     <!-- Contact -->
-    <div id="contact" class="container col-xxl-9 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div id="contact" class="container col-xxl-10 px-4 py-5">
+      <div class="row flex-lg-row align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="static/images/logo_blue_bezpozadi.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+          <img src="static/images/logo_blue_bezpozadi.png" class="d-block mx-lg-auto img-fluid" alt="es_logo" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">Kontakt</h1>
@@ -152,26 +162,19 @@
             <br>
             <div class="contact-row">
               <h4><a href="tel:+420 725 956 042" class="text-color-es">
-              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16">
-                <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
-                <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-              </svg> 
+                <img src="static/images/icons/mobile-alt-solid.svg" alt="phone" width="36" height="36">
               <p>+420 725 956 042</p>
             </a></h4>
             </div>
             <div class="contact-row ">
               <h4><a href="https://www.instagram.com/elementswimming_cz" class="text-color-es">
-                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-                  <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
-                </svg>
+                <img src="static/images/icons/instagram-brands.svg" alt="instagram" width="36" height="36">
                 <p>elementswimming_cz</p>
               </a></h4>
               </div>
               <div class="contact-row">
                 <h4><a href="mailto:elementswimming@gmail.com" class="text-color-es">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
-                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
-                  </svg>
+                  <img src="static/images/icons/envelope-regular.svg" alt="mail" width="36" height="36">
                   <p>elementswimming@gmail.com</p>
                 </a></h4>
                 </div>
@@ -205,7 +208,7 @@
 
 <!-- Credits 
   https://getbootstrap.com/
-  https://www.pexels.com/cs-cz/foto/osoba-voda-sport-mokry-1263425/
-  https://codepen.io/martinwolf/pen/eNNdme
+  Icons: https://fontawesome.com/
+  Navbar hover effect: https://codepen.io/martinwolf/pen/eNNdme
   -->
 </html>
