Hover service pictures

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
       <h1 class="display-4 py-3 fw-bold text-center">Služby</h1>
       <div class="col-xxl-12 mx-auto">
         <p class="lead mb-4 text-justify">
-          <span class="fw-bold">Individuální lekce</span> probíhají s certifikovanými Trenéry ČSPS (Český svaz plaveckých sportů). Přidanou hodnotou, kterou Element Swimming nabízí je fakt, že <span class="fw-bold text-color-es-plain">všichni naši 
-          trenéři</span> si prošli dlouhodobým rozvojem v procesu sportovní (plavecké) přípravy. Mnozí z nich <span class="fw-bold text-color-es-plain">jsou</span> bývalí reprezentanti a také medailisté z národních šampionátů. 
-          Toto dělá z naších trenérů <span class="fw-bold text-color-es-plain">špičky ve svém oboru co do teorie i praxe.</span> Naše služby poskytujeme v následujích městech.
+          Individuální lekce probíhají s certifikovanými Trenéry ČSPS (Český svaz plaveckých sportů). Přidanou hodnotou, kterou Element Swimming nabízí je fakt, že všichni naši 
+          trenéři si prošli dlouhodobým rozvojem v procesu sportovní (plavecké) přípravy. Mnozí z nich json bývalí reprezentanti a také medailisté z národních šampionátů. 
+          Toto dělá z naších trenérů špičky ve svém oboru co do teorie i praxe. Naše služby poskytujeme v následujích městech.
           </p>
       </div>
   
