--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </p>
       </div>
   
-      <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+      <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5">
         <div class="col">
           <button class="btn-no-style" data-bs-toggle="modal" data-bs-target="#PragueModal">
           <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/pexels-jeshootscom-442583x.png');">
@@ -135,22 +135,6 @@
             </div>
           </div>
         </button>
-        <div class="modal fade" id="PragueModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Praha</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-
-              </div>
-            </div>
-          </div>
-        </div>
         </div>
   
         <div class="col">
@@ -180,6 +164,21 @@
           </div>
           </button>
         </div>
+
+        <div class="col">
+          <button class="btn-no-style">
+          <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/olomouc-g1bf25d3e5_1920.png');">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-start">Olomouc</h2>
+              <ul class="d-flex list-unstyled mt-auto">
+                <li class="me-auto">
+                </li>
+              </ul>
+            </div>
+          </div>
+          
+          </button>
+        </div>
     </div>
     </div>
 
@@ -202,8 +201,8 @@
   </div>
     
     <!-- Contact -->
-    <div id="contact" class="container col-xxl-10 px-4 py-5">
-      <div class="row flex-lg-row align-items-center g-5 py-5">
+    <div id="contact" class="container col-xxl-10 px-4 py-4">
+      <div class="row flex-lg-row align-items-center g-5">
         <div class="col-10 col-sm-8 col-lg-6 p-5">
           <img src="static/images/logo_blue_bezpozadi.png" class="d-block mx-lg-auto img-fluid" alt="es_logo" width="700" height="500" loading="lazy">
         </div>
@@ -257,6 +256,72 @@
           <li class="nav-item"><a href="#contact" class="nav-link px-2 text-muted">Kontakt</a></li>
         </ul>
       </footer>
+    </div>
+
+    <!-- Services Modals  -->
+    <div class="modal fade" id="PragueModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-xl modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 pt-2 pb-3">
+            <div class="col">
+              <div class="card card-cover h-100 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
+                <div class="d-flex flex-column h-75 p-5 pb-3 text-white text-shadow-1">
+                  <h2 class="pt-2 mt-2 mb-4 display-6 lh-1 fw-bold">Program 1.1</h2>
+                  <h2 class="mb-4 lh-1 fw-bold">800,- Kč/hod</h2>
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="d-flex align-items-center me-3">
+                      <small>Lekce plavání, kdy se trenér věnuje pouze Vám.</small>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card card-cover h-100 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
+                <div class="d-flex flex-column h-75 p-5 pb-3 text-white text-shadow-1">
+                  <h2 class="pt-2 mt-2 mb-4 display-6 lh-1 fw-bold">Program 1.2</h2>
+                  <h2 class="mb-4 lh-1 fw-bold">900,- Kč/hod</h2>
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="d-flex align-items-center me-3">
+                      <small>*Lekce plavání, kdy se trenér věnuje nanejvýš 2 osobám. </small>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card card-cover h-100 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
+                <div class="d-flex flex-column h-75 p-5 pb-3 text-white text-shadow-1">
+                  <h2 class="pt-2 mt-2 mb-4 display-6 lh-1 fw-bold">Program 1.3</h2>
+                  <h2 class="mb-4 lh-1 fw-bold">1000,- Kč/hod</h2>
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="d-flex align-items-center me-3">
+                      <small>*Plavecké lekce pro 3 - 4 osoby. </small>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card card-cover h-100 overflow-hidden text-white bg-color-es rounded-5 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
+                <div class="d-flex flex-column h-75 p-5 pb-3 text-white text-shadow-1">
+                  <h2 class="pt-2 mt-2 mb-4 display-6 lh-1 fw-bold">Program 1.5</h2>
+                  <h2 class="mb-4 lh-1 fw-bold">1250,- Kč/hod</h2>
+                  <ul class="d-flex list-unstyled mt-auto">
+                    <li class="d-flex align-items-center me-3">
+                      <small>*Plavecké lekce pro 5 a více osob.</small>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            </div>
+        </div>
+      </div>
     </div>
 
     <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
