--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=5.0">
-    <meta name="description" content="" />
+    <meta name="description" content="Plavecký trénink pod dohledem vysokoškolsky vzdělaných profesionálů s několikaletou praxí v oboru - Praha, Brno, Ostrava a Olomouc (možnost využít také Online coaching)." />
     <title>Element swimming</title>
-
     <link rel="icon"href="static/images/logo_icon.png">
+    <link rel="apple-touch-icon" href="static/images/apple-touch-icon-144x144.png">
     <!-- Bootstrap core CSS -->
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -42,7 +42,7 @@
     <div class="container smart-scroll header-container">
       <header class="d-flex flex-wrap justify-content-center py-3 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-          <img src="static/images/basic_logo.webp" alt="es-logo" class="bi me-2" width="60" height="40"/>
+          <img src="static/images/basic_logo.webp" alt="es-logo" class="bi me-2" width="54" height="36"/>
           <span class="fs-4">Element swimming</span>
         </a>
   
@@ -79,10 +79,10 @@
     </div>
 
     <!-- About -->
-    <div id="about" class="container col-xxl-10 px-4 py-5 border-bottom">
+    <div id="about" class="container col-xxl-10 px-4 py-5 border-bottom animated fadeInRight">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid border rounded-3 shadow-lg" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+          <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid border rounded-3 shadow-lg" alt="trainer" width="750" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">O nás</h1>
@@ -255,10 +255,10 @@
     <!-- Footer -->
     <div class="container">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-muted">&copy; 2021 Element swimming | <a class="light-gray no-decoration" href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</span></p>
+        <p class="col-md-4 mb-0 text-muted">&copy; 2021 Element swimming | <a class="light-gray no-decoration" href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a></p>
     
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-          <img src="static/images/basic_logo.webp" alt="es-logo" class="bi me-2" width="60" height="40"/>
+          <img src="static/images/basic_logo.webp" alt="es-logo" class="bi me-2" width="54" height="36"/>
         </a>
     
         <ul class="nav col-md-4 justify-content-end">
