--- a/index.html
+++ b/index.html
@@ -505,12 +505,13 @@ if ($('.smart-scroll').length > 0) { // check if element exists
     var last_scroll_top = 0;
     $(window).on('scroll', function() {
         scroll_top = $(this).scrollTop();
-        if(scroll_top < last_scroll_top) {
+        if(scroll_top < last_scroll_top || scroll_top < 0 || scroll_top == 0) {
             $('.smart-scroll').removeClass('scrolled-down').addClass('scrolled-up');
         }
         else {
             $('.smart-scroll').removeClass('scrolled-up').addClass('scrolled-down');
         }
+        console.log(scroll_top, last_scroll_top);
         last_scroll_top = scroll_top;
     });
 }
