--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- About -->
     <div id="about" class="container col-xxl-10 px-4 py-4 border-bottom">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
-        <div class="col-10 col-sm-8 col-lg-6 pxh-5 pyh-5">
+        <div class="col-10 col-sm-8 col-lg-6">
           <img src="static/images/IMG_5076.jpg" class="d-block mx-lg-auto img-fluid border rounded-3 shadow-lg" alt="trainer" loading="lazy">
         </div>
         <div class="col-lg-6">
