Trainer photo compressed

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div id="about" class="container col-xxl-10 px-4 py-4 border-bottom">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="static/images/IMG_5076.jpg" class="d-block mx-lg-auto img-fluid border rounded-3 shadow-lg" alt="trainer" loading="lazy">
+          <img src="static/images/pan_trener.webp" class="d-block mx-lg-auto img-fluid border rounded-3 shadow-lg" alt="trainer" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 py-3">O nás</h1>
